--- a/css/style.css
+++ b/css/style.css
@@ -24,11 +24,11 @@
   */
   /* BASE TEXT COLORS */
   body {
-    color: rgba(0, 0, 0, 0.8);
+    color: rgba(255, 255, 255, 0.8);
   }
   
   h1, h2, h3, h4, h5, h6 {
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
   }
   
   /* BASE TEXT FONTS */
@@ -138,6 +138,7 @@
   img {
     max-width: 100%;
     height: auto;
+    margin-top: 0;
   }
   
   /* RESET BODY */
@@ -273,13 +274,20 @@
             align-items: center;
   }
   .site-header a {
-    color: white;
+    color: rgb(255, 232, 80);
     text-decoration: none;
   }
   .site-header h1 {
     font-size: 1.5em;
-    margin: 0;
+    margin: 0; 
   }
+
+  .logo {
+    display: inline-block;
+    margin-left: -250px;
+
+  }
+
   
   /* SITE FOOTER */
   .site-footer {
@@ -293,7 +301,7 @@
             justify-content: center;
   }
   .site-footer a {
-    color: rgb(255, 255, 255);
+    color: rgb(255, 232, 80);
     text-decoration: none;
   }
   
@@ -314,6 +322,7 @@
   
   section {
     padding: 4em 0;
+    background-color: black;
     min-height: 100vh;
     display: -ms-grid;
     display: grid;
@@ -362,75 +371,75 @@
 .site-header .site-nav .menu-button svg {
   fill: white;
 }
-.site-header .site-nav .menu-button svg rect {
-  -webkit-transition: 0.3s all ease-out;
-  transition: 0.3s all ease-out;
-}
-.site-header .site-nav ul {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-  background-color: rgb(107, 151, 255);
-  position: fixed;
-  top: 0;
-  right: 0;
-  width: 100%;
-  height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-transform: translate(100%, 0);
-          transform: translate(100%, 0);
-  -webkit-transition: 0.3s all ease-out;
-  transition: 0.3s all ease-out;
-  z-index: 1;
-}
-.site-header .site-nav li {
-  font-size: 4vw;
-  min-width: 20vw;
-  -webkit-transform: translate(10%, 0);
-          transform: translate(10%, 0);
-  -webkit-transition: 0.3s all ease-out 0.3s;
-  transition: 0.3s all ease-out 0.3s;
-  opacity: 0;
-}
-.site-header .site-nav[data-navstate=open] .menu-button {
-  position: fixed;
-}
-.site-header .site-nav[data-navstate=open] #menubar-top {
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  -webkit-transform: translate(7px, 7px) rotate(-45deg);
-          transform: translate(7px, 7px) rotate(-45deg);
-}
-.site-header .site-nav[data-navstate=open] #menubar-middle {
-  opacity: 0;
-}
-.site-header .site-nav[data-navstate=open] #menubar-bottom {
-  -webkit-transform-origin: center;
-          transform-origin: center;
-  -webkit-transform: translate(0, -4px) rotate(45deg);
-          transform: translate(0, -4px) rotate(45deg);
-}
-.site-header .site-nav[data-navstate=open] ul {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-}
-.site-header .site-nav[data-navstate=open] li {
-  -webkit-transform: translate(0, 0);
-          transform: translate(0, 0);
-  opacity: 1;
-}
+
+
+/* TOGGLE NAV */ 
+
+@media (max-width: 767px) {
+  .toggle-nav .site-id {
+      position: absolute;
+  }
+
+  .toggle-nav .site-nav {
+      text-align: right;
+  }
+
+  .toggle-nav .site-nav .menu-button {
+      background-color: transparent;
+      border:none;
+      display: inline-block;
+      cursor: pointer;
+      padding: .2em 0;
+      margin-bottom: .8em;
+  }
+
+  .toggle-nav .site-nav .menu-button::selection {
+      background: white;
+  }
+
+  .toggle-nav .site-nav ul {
+      display: block;
+      text-align: center;
+  }
+
+  .toggle-nav .site-nav a:hover {
+      background:rgb(195, 147, 218);
+      color: black;
+  }
+
+  .toggle-nav[data-navstate="closed"] ul {
+      height: 0;
+      overflow: hidden;
+  }
+
+  .toggle-nav[data-navstate="open"] ul {
+      height: auto;
+      overflow: visible;
+  }
+
+  /* NAVICON */
+
+  .toggle-nav .site-nav .menu-button.navicon {
+      border:none;
+      color: rgba(255,255,255,0)
+  }
+
+
+  .toggle-nav .site-nav .menu-button.navicon::after {
+      content: "\2630";
+      display: inline-block;
+      padding: 0 .4em;
+      margin: 0;
+      color: rgba(0, 0, 0, .5);
+      font-size: 1.5em;
+  }
+  
+  .toggle-nav[data-navstate="open"] .site-nav .menu-button.navicon::after {
+      content: "\2715";
+
+
+  }
+
 
 /* FOOTER SITE-NAV */
 .site-footer .site-nav ul {
