--- a/css/style.css
+++ b/css/style.css
@@ -290,6 +290,14 @@
     margin-bottom: 0em;
   }
 
+  .s-character2 {
+    margin-top: 2em;
+    margin-left: 15em;
+    margin-right: -9em;
+    margin-bottom: -4.5em;
+
+  }
+
 
   .content-block {
     margin: 1em;
