--- a/old-scss/style-backup.css
+++ b/old-scss/style-backup.css
@@ -308,11 +308,11 @@
 
   #products {
     background-image: url(../img/patterns2.png);
-    background-size: 450px;
   }
 
   #section4 {
     background-image: url(../img/patterns.png);
+    background-repeat: repeat;
     background-size: 450px;
   }
 
